--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,31 @@
 
+body {
+    margin: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.avatar {
+    width: 150px;
+}
+
+.card {
+    width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+    text-align: center;
+    background: #6c6e70;
+    color: white;
+    border-bottom: 6px solid #d8cefe;
+    border-radius:20px;
+}
+
+.card .avatar{
+    border:solid white 2px;
+    border-radius:50%;
+}
+
+.border-blue {
+    border: 1px dotted blue;
+}
