--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,24 @@ body {
     width: 150px;
 }
 
-/* Style the business card container */ 
-.card { 
-    width: 300px; 
-    background-color: rgba(5, 0, 0, 0.8); /* Add a semi-transparent white background to the card */ 
-    border-radius: 10px; 
-    padding: 20px; 
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
-    display: flex; 
-    align-items: center; 
-} 
+
+
+   
+
+
+.card {
+    width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    display: flex;
+     align-items: center; 
+    justify-content: space-around;
+    text-align: center;
+    background: #6c6e70;
+    color: white;
+    border-bottom: 6px solid #d8cefe;
+    border-radius:20px;
+}
 
 .card .avatar{
     border:solid white 2px;
